style.css
*{
    margin: 0px;
    padding: opx;
}

body::-webkit-scrollbar{
    display: none;
}

.AU-header-section {
    display: flex;
    width: 100%;
    contain: layout;
    flex-direction: column;
    align-items: center;
    gap: 147px;
    border-radius: var(--button-button-corner-radius, 0px);
    background: linear-gradient(180deg, rgba(0, 0, 0, 0.00) 0%, rgba(0, 0, 0, 0.70) 85.86%), url(assets/au_bgi.png), lightgray 50% / cover no-repeat;
    background-size: cover;
    background-position: center;
}

.services-header-section {
    display: flex;
    width: 100%;
    contain: layout;
    flex-direction: column;
    align-items: center;
    gap: 147px;
    border-radius: var(--button-button-corner-radius, 0px);
    background: linear-gradient(180deg, rgba(0, 0, 0, 0.00) 0%, rgba(0, 0, 0, 0.70) 85.86%), url(assets/services.png), lightgray 50% / cover no-repeat;
    background-size: cover;
    background-position: center;
}

.FB-header-section {
    display: flex;
    width: 100%;
    contain: layout;
    flex-direction: column;
    align-items: center;
    gap: 147px;
    border-radius: var(--button-button-corner-radius, 0px);
    background: linear-gradient(180deg, rgba(0, 0, 0, 0.00) 0%, rgba(0, 0, 0, 0.70) 85.86%), url(assets/flashbuild2_banner.png), lightgray 50% / cover no-repeat;
    background-size: cover;
    background-position: center;
}


.home-header-section {
    display: flex;
    width: 100%;
    contain: layout;
    flex-direction: column;
    align-items: center;
    gap: 147px;
    border-radius: var(--button-button-corner-radius, 0px);
    background: linear-gradient(180deg, rgba(0, 0, 0, 0.00) 0%, rgba(0, 0, 0, 0.70) 100%), url(assets/homepage.png), lightgray 50% / cover no-repeat;
    background-size: cover;
    background-position: center;

}

.navigation-bar{
    display: flex;
    position: sticky;
    z-index: 910px;
    width: 100%;
    height: 173px;
    padding: 16px 160px;
    gap: 130px;
    justify-content: center;
    align-items: center;
    background: linear-gradient(180deg, rgba(0, 0, 86, 0.62) 0%, rgba(8, 0, 57, 0.37) 16.67%, rgba(0, 0, 0, 0.00) 34.72%);
    transition: top 0.3s;
}

.logo{
    width: 119px;
    height: 64.38px;
    flex-shrink: 0;
}


/* green button styling */
.g-btn{
    display: flex;
    padding: 10px 24px;
    justify-content: center;
    align-items: center;
    gap: 8px;
    border: none;
    border-radius: var(--button-button-corner-radius, 64px);
    background: var(--button-background-color-accent, #03D739);
    color: var(--button-text-text-on-accent, #000);
    text-align: center;
    font-family: Quicksand;
    font-size: 14px;
    font-style: normal;
    font-weight: 600;
    line-height: 20px; /* 142.857% */
    letter-spacing: 0.5px;
}


/* orange button styling */
.o-btn{
    display: flex;
    padding: 10px 24px;
    justify-content: center;
    align-items: center;
    gap: 8px;
    color: var(--button-secondary-text-on-default, #FFF);
    text-align: center;
    font-family: Roboto;
    font-size: 14px;
    font-style: normal;
    border: none;
    font-weight: 500;
    line-height: 20px;
    letter-spacing: 0.1px;
    border-radius: var(--corner-radius-applied-corner-radius-button, 999px);
    background: var(--button-secondary-fill-default-state, #FB3E00);
}


/* blue button styling */
.b-btn{
    display: flex;
    padding: 10px 24px;
    justify-content: center;
    align-items: center;
    gap: 8px;
    border: none;
    color: var(--button-secondary-text-on-default, #FFF);
    text-align: center;
    font-family: Roboto;
    font-size: 14px;
    font-style: normal;
    font-weight: 500;
    line-height: 20px;
    letter-spacing: 0.1px;
    border-radius: var(--corner-radius-applied-corner-radius-button, 999px);
    background: var(--button-secondary-fill-default-state, #1A16E3);
}

a{
    display: flex;
    width: auto;
    height: 18px;
    justify-content: center;
    align-items: center;
    flex-shrink: 0;
    color: var(--white, #FFF);
    font-feature-settings: 'clig' off, 'liga' off;
    font-family: Source Sans Pro;
    font-size: 14px;
    font-style: normal;
    font-weight: 600;
    line-height: normal;
    letter-spacing: 0.114px;
    transition: color 0.3s ease;
    text-decoration: none;
    text-transform: uppercase;
}

/* hover effect for navigation bar */
a:hover{
    color: var(--hover-color, #FB3E00);
}



.page-link{
    display: flex;
    width: 655px;
    padding: 24px;
    align-items: flex-start;
    gap: 96px;
    flex-shrink: 0;
    border-radius: var(--button-button-corner-radius, 0px);
}

ul 
{
    list-style-type: none;
    padding: 0; margin: 0;
}

p{
    color: var(--white, #FFF);
    font-family: Source Sans Pro;
    font-size: 16px;
    font-style: normal;
    font-weight: 400;
    line-height: normal;
}

h2{
    color: #FFF;
    font-family: Source Sans Pro;
    font-size: 50.771px;
    font-style: normal;
    font-weight: 900;
    line-height: normal;
    text-transform: uppercase;
    padding-bottom: 24px;
    text-align: center;
}

.header-text{
    display: flex;
    flex-direction: column;
    height: 527px;
    align-items: center;
    align-self: stretch;
    border-radius: var(--button-button-corner-radius, 0px);
}


/* white background section */
.wsection{
    width: 100%;
    background-color: #FFF;
    height: 700px;
    display: flex;
    justify-content: center;
    align-items: center;
    overflow: hidden;
}


/* blue background section */
.bsection{
    width: 100%;
    height: 700px;
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: var(--button-button-corner-radius, 0px);
    background: var(--tertiary, #1A196F);
}


/* gradient background section */
.gsection{
    width: 100%;
    height: 700px;
    display: flex;
    justify-content: center;
    align-items: center;
    overflow: hidden;
    border-radius: var(--button-button-corner-radius, 0px);
    background: var(--gradient-bg, linear-gradient(149deg, #040357 47.92%, #040378 67.19%, #222CE3 90.63%));
}

.g-block{
    width: 263px;
    height: 168px;
    flex-shrink: 0;
    border-radius: 20px;
    background: var(--gradient-bg, linear-gradient(149deg, #040357 47.92%, #040378 67.19%, #222CE3 90.63%));
    margin-right: 33px;
}

.card-head-text{
    color: var(--bodytext-color, #1B1B1E);
    font-family: Source Sans Pro;
    font-size: 20px;
    font-style: normal;
    font-weight: 700;
    line-height: normal;
    float: left;
    text-transform: uppercase;
}

.w-head-text-FT{
    color: var(--white, #FFF);
    font-family: Source Sans Pro;
    font-size: 20px;
    font-style: normal;
    font-weight: 700;
    line-height: normal;
    text-transform: uppercase;
    width: 231px;
    height: 56px;
    padding-top: 28px;
    padding-left: 16px;
    padding-bottom: 24px;
}

/* blue head text */
.b-head-text{
    color: var(--tertiary, #1A196F);
    text-align: center;
    font-family: Source Sans Pro;
    font-size: 48px;
    font-style: normal;
    font-weight: 700;
    line-height: normal;
    text-transform: uppercase;
}


/* orange head text */
.o-head-text{
    color: var(--secondary-color, var(--secondary-ultimate-orange-60, #FB3E00));
    font-family: Source Sans Pro;
    font-size: 24px;
    font-style: normal;
    font-weight: 700;
    line-height: normal;
    text-transform: uppercase;
    padding-bottom: 24px;
}


/* green head text */
.g-head-text{
    color: var(--iconekt-green, #00CA3A);
    font-family: Source Sans Pro;
    font-size: 24px;
    font-style: normal;
    font-weight: 700;
    line-height: normal;
    text-transform: uppercase;
}

.black-head-text{
    color: var(--bodytext-color, #1B1B1E);
    font-family: Source Sans Pro;
    font-size: 22px;
    font-style: normal;
    font-weight: 700;
    line-height: normal;
    text-transform: uppercase;
}

.body-text{
    width: 345px;
    height: 112px;
    flex-shrink: 0;
    color: var(--bodytext-color, #1B1B1E);
    font-family: Source Sans Pro;
    font-size: 16px;
    font-style: normal;
    font-weight: 400;
    line-height: normal;
}


/* head text in italic */
.HT-italic{
    color: var(--black, #000);
    font-family: Source Sans Pro;
    font-size: 48px;
    font-style: italic;
    font-weight: 400;
    line-height: normal;
    text-transform: uppercase;
}


/* head text in bold */
.HT-bold{
    color: var(--tertiary, #1A196F);
    font-family: Source Sans Pro;
    font-size: 48px;
    font-style: normal;
    font-weight: 700;
    line-height: normal;
    text-transform: uppercase;
    padding-bottom: 24px;
}


/* subtitle in orange */
.subtitle-o{
    color: var(--secondary-color, var(--secondary-ultimate-orange-60, #FB3E00));
    font-family: Source Sans Pro;
    font-size: 24px;
    font-style: normal;
    font-weight: 700;
    line-height: normal;
    text-transform: uppercase;
    padding-bottom: 24px;
}


/* horizontal container  */
.h-container{
    display: flex;
    flex-direction: row;
    justify-content: left;
}


/* vertical container  */
.v-container{
    display: flex;
    flex-direction: column;
    justify-content: left;
}

.footer-link{
    color: var(--bodytext-color, #1B1B1E);
    font-family: Source Sans Pro;
    font-size: 16px;
    font-style: normal;
    font-weight: 400;
    line-height: normal;
    padding-bottom: 16px;
    text-transform: inherit;
}

.footer-link:hover{
    color: var(--hover-color, #1A196F);
}

.footer-link-box{
    display: flex;
    flex-direction: column;
    align-items: start;
    align-self: stretch;
}

.social-link-btn{
    width: 36px;
    padding-right: 16; 
}


/* flashbuild rotator */


.fbrot {
    display: flex; 
    justify-content: center;

}

.rotsvg
{
    width: 282px;
    margin-right: -64px;
}


.rottext
{

    width: 312px;
    padding-left: 152px;
    flex-shrink: 0;
    color: var(--bodytext-color, #1B1B1E);
    font-family: Source Sans Pro;
    font-size: 16px;
    font-style: normal;
    font-weight: 400;
    line-height: normal;

    display: none;
    position: absolute;
}

.fbrot:hover .rotsvg{
    z-index: -1;
    opacity:0.2;
}
  
.fbrot .rotsvg:hover{
    z-index: 1;
    opacity:1;
}


.rotblock:hover .rottext { display: block; }

.rotblock:not(:hover) .rottext { display: none; }

.fbrot:hover {
    transform: scale(0.8);
    transition-timing-function: ease;
    transition: 0.4s;
}

.fbrot:hover .rotblock {
    transform: scale(0.9);
    transition-timing-function: ease;
    transition: 0.5s;
}

.fbrot .rotblock:hover {
    transform: scale(1.1);
    transition-timing-function: ease;
    transition: 0.5s;
}

.slides {
    display: flex;
    overflow-x: auto;
    scroll-snap-type: x mandatory;
}
.slides > div {
    display: flex;
    flex-shrink: 0;
    width: 100%;
    height: 300px;
    scroll-snap-align: start;
    scroll-behavior: smooth;
}

.team-card-textblock{
    display: flex;
    flex-direction: column;
    text-align: left;
    width: 263px;
    height: 168px;
    position: relative;
    border-radius: 20px;
    background: #F9F9FB;
    padding-left: 16px;
}

.team-card{
    display: flex;
    justify-content: center;
    align-items: center;
    width: 312px;
    height: 223px;
    flex-shrink: 0;
    border-radius: 20px;
    margin-top: 20px;
}

.team-png{
    position: relative;
    margin-left: -90px;
    margin-top: -15px;
}

.FT-Link-Container{
    display: flex;
    position: absolute;
    flex-direction: row;
    justify-content: left;
    padding-top: 193px;
    padding-left: 100px;
}

